--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -38,7 +38,7 @@ and open the template in the editor.
                     SleepyCat is a creation of Yvonne to display her works and also get in touch with potential clients
 
 
-                    <b>Work Experience<b><br>
+                    <b>Work Experience</b><br>
                             -Service Crew & Manager (Kiwami Ramen & Gyoza Bar, Part-Time) 2021-2023, 1 yr 5mths<br>
                             -Service Crew (Aburi En, Contract) 2021, 8 mths<br>
                             -Digital Ambassador (IMDA, Contract) 2020-2021, 8 mths<br>
