--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -20,6 +20,8 @@ and open the template in the editor.
     </head>
     <body>
         <div id="hero">
+            
+            <span class='op1'>Creative Design and Code</span>
 
             <p style='text-align: right; width:100vw; padding-right:2vw; margin-top:80vh; z-index:5; position: fixed; font-size:0.35em;'>Copyright © Slumberous Cat 2023</p>
 
@@ -35,41 +37,37 @@ and open the template in the editor.
             <div id='container1'>
 
                 <div id="mainContent">
-                    SleepyCat is a creation of Yvonne to display her works and also get in touch with potential clients
+                    SleepyCat is a creation of Yvonne to display her works and also get in touch with potential clients<br><br>
 
 
                     <b>Work Experience</b><br>
                             -Service Crew & Manager (Kiwami Ramen & Gyoza Bar, Part-Time) 2021-2023, 1 yr 5mths<br>
                             -Service Crew (Aburi En, Contract) 2021, 8 mths<br>
-                            -Digital Ambassador (IMDA, Contract) 2020-2021, 8 mths<br>
+                            -Digital Ambassador (IMDA, Contract) 2020-2021, 8 mths<br><br>
 
                             <b>Education</b><br>
                             -Diploma in Digital Design and Development (Republic Polytechnic) 2025<br>
                             -Diploma in Hospitality Management (Beacon International) 2021<br>
                             -Higher Nitec in Accounting (Institute of Technical Institute) 2020<br>
                             -Nitec in Hair Services, Hair & Scalp Care (Institute of Technical Institute) 2016<br>
-                            -Nitec in Interactive Media Design (Institute of Technical Institute) 2013<br>
+                            -Nitec in Interactive Media Design (Institute of Technical Institute) 2013<br><br>
 
                             <b>Awards</b><br>
                             -Director's Roll of Honor 2022<br>
                             -Director's List  2012, 2015, 2016, 2022<br>
                             -Edusave Award for achievement, good leadership and service 2012, 2016<br>
                             -Edusave Certificate of academic achievement 2012, 2013, 2015,2016<br>
-                            -NYAA Bronze 2010<br>
+                            -NYAA Bronze 2010<br><br>
 
                             <a href="file/Yvonne_resume.pdf" download>
                                 Download Resume
                             </a>
                             </div>
 
-                            <div id='sideContent'><p><span class='op1'>Creative Design and Code</span></p></div>
-
-
+                            
                             </div>
 
                             <!--end of main-->
-
-
 
                             <nav class="navbar fixed-bottom navbar-expand bg-custom navbar-text">
                                 <div class='nav-bg'>
