--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -37,20 +37,20 @@ and open the template in the editor.
             <div id='container1'>
 
                 <div id="mainContent">
-                    SleepyCat is a creation of Yvonne to display her works and also get in touch with potential clients<br><br>
+                    Slumberous Cat is a creation of Yvonne to display her works and also get in touch with potential clients<br><br>
 
 
                     <b>Work Experience</b><br>
-                            -Service Crew & Manager (Kiwami Ramen & Gyoza Bar, Part-Time) 2021-2023, 1 yr 5mths<br>
-                            -Service Crew (Aburi En, Contract) 2021, 8 mths<br>
-                            -Digital Ambassador (IMDA, Contract) 2020-2021, 8 mths<br><br>
+                    - Service Crew & Manager <i>(Kiwami Ramen & Gyoza Bar, Part-Time) 2021-2023, 1 yr 5mths</i><br>
+                    - Service Crew <i>(Aburi En, Contract) 2021, 8 mths</i><br>
+                    - Digital Ambassador <i>(IMDA, Contract) 2020-2021, 8 mths</i><br><br>
 
                             <b>Education</b><br>
-                            -Diploma in Digital Design and Development (Republic Polytechnic) 2025<br>
-                            -Diploma in Hospitality Management (Beacon International) 2021<br>
-                            -Higher Nitec in Accounting (Institute of Technical Institute) 2020<br>
-                            -Nitec in Hair Services, Hair & Scalp Care (Institute of Technical Institute) 2016<br>
-                            -Nitec in Interactive Media Design (Institute of Technical Institute) 2013<br><br>
+                            - Diploma in Digital Design and Development <i>(Republic Polytechnic) 2025</i><br>
+                            - Diploma in Hospitality Management <i>(Beacon International) 2021</i><br>
+                            - Higher Nitec in Accounting <i>(Institute of Technical Education) 2020</i><br>
+                            - Nitec in Hair Services, Hair & Scalp Care <i>(Institute of Technical Education) 2016</i><br>
+                            - Nitec in Interactive Media Design <i>(Institute of Technical Education) 2013</i><br><br>
 
                             <b>Awards</b><br>
                             -Director's Roll of Honor 2022<br>
@@ -82,10 +82,10 @@ and open the template in the editor.
                                                 <b><a class="nav-link" href="about.html">About</a></b>
                                             </li>
                                             <li class="nav-item">
-                                                <b><a class="nav-link" href="#">Portfolio</a></b>
+                                                <b><a class="nav-link" href="portfolio.html">Portfolio</a></b>
                                             </li>
                                             <li class="nav-item">
-                                                <b><a class="nav-link" href="#">Contact</a></b>
+                                                <b><a class="nav-link" href="contact.html">Contact</a></b>
                                             </li>  
 
                                         </ul>
