--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,7 +35,7 @@ and open the template in the editor.
             <!---Main-->
             <div id='container1'>
                 <div id='sideContent'><p><b>Slumberous Cat</b><br><span class='op'>Creative Design and Code</span></p></div>
-                <img src='images/cat.png' style='margin-left:40vw; height:90vh; position:fixed;'/>
+                <img src='images/cat.png' style='margin-left:40vw; height:90%; position:fixed;'/>
 
             </div>
 
@@ -50,16 +50,16 @@ and open the template in the editor.
                     <div class="container-fluid" >
                         <ul class="navbar-nav right" style='font-size:1rem; margin-top:30px;' >
                             <li class="nav-item">
-                                <b><a class="nav-link" href="index.html">Home</a></b>
+                                <b><a class="nav-link" href="index.html"><u>Home</u></a></b>
                             </li>
                             <li class="nav-item">
                                 <b><a class="nav-link" href="about.html">About</a></b>
                             </li>
                             <li class="nav-item">
-                                <b><a class="nav-link" href="#">Portfolio</a></b>
+                                <b><a class="nav-link" href="portfolio.html">Portfolio</a></b>
                             </li>
                             <li class="nav-item">
-                                <b><a class="nav-link" href="#">Contact</a></b>
+                                <b><a class="nav-link" href="contact.html">Contact</a></b>
                             </li>  
 
                         </ul>
