--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -61,7 +61,7 @@ and open the template in the editor.
                                 <b><a class="nav-link" href="about.html">About</a></b>
                             </li>
                             <li class="nav-item">
-                                <b><a class="nav-link" href="portfolio.html">Portfolio</a></b>
+                                <b><a class="nav-link" href="portfolio.html"><u>Portfolio</u></a></b>
                             </li>
                             <li class="nav-item">
                                 <b><a class="nav-link" href="contact.html">Contact</a></b>
