--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -64,7 +64,7 @@ and open the template in the editor.
                                 <b><a class="nav-link" href="portfolio.html">Portfolio</a></b>
                             </li>
                             <li class="nav-item">
-                                <b><a class="nav-link" href="contact.html">Contact</a></b>
+                                <b><a class="nav-link" href="contact.html"><u>Contact</u></a></b>
                             </li>  
 
                         </ul>
