--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -13,7 +13,10 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="javascript/script.js"></script>
         <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
+        
 
         <link rel="stylesheet" href="https://use.typekit.net/gyc1igq.css">
         <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -77,12 +80,12 @@ and open the template in the editor.
 
 
                     <div class="container-fluid" >
-                        <ul class="navbar-nav right" style='font-size:1rem; margin-top:30px;' >
+                        <ul id="nav" class="navbar-nav right" style='font-size:1rem; margin-top:30px;' >
                             <li class="nav-item">
                                 <b><a class="nav-link" href="index.html">Home</a></b>
                             </li>
-                            <li class="nav-item">
-                                <b><a class="nav-link" href="about.html"><u>About</u></a></b>
+                            <li class="nav-item selected">
+                                <b><a class="nav-link" href="about.html">About</a></b>
                             </li>
                             <li class="nav-item">
                                 <b><a class="nav-link" href="portfolio.html">Portfolio</a></b>
@@ -90,6 +93,7 @@ and open the template in the editor.
                             <li class="nav-item">
                                 <b><a class="nav-link" href="contact.html">Contact</a></b>
                             </li>  
+                            <li id="nav_indicator"></li>
 
                         </ul>
                     </div>
