--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -13,6 +13,8 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="script.js"></script>
         <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
 
         <link rel="stylesheet" href="https://use.typekit.net/gyc1igq.css">
@@ -53,26 +55,27 @@ and open the template in the editor.
 
 
                     <div class="container-fluid" >
-                        <ul class="navbar-nav right" style='font-size:1rem; margin-top:30px;' >
+                        <ul id="nav" class="navbar-nav right" style='font-size:1rem; margin-top:30px;' >
                             <li class="nav-item">
                                 <b><a class="nav-link" href="index.html">Home</a></b>
                             </li>
                             <li class="nav-item">
                                 <b><a class="nav-link" href="about.html">About</a></b>
                             </li>
-                            <li class="nav-item">
-                                <b><a class="nav-link" href="portfolio.html"><u>Portfolio</u></a></b>
+                            <li class="nav-item selected">
+                                <b><a class="nav-link" href="portfolio.html">Portfolio</a></b>
                             </li>
                             <li class="nav-item">
                                 <b><a class="nav-link" href="contact.html">Contact</a></b>
                             </li>  
+                            <li id="nav_indicator"></li>
 
                         </ul>
                     </div>
                     <a class="nav-link" href="#" style='width:70vw;' ><span id='logo1'><img src='images/catLogo.png' style='width: 3rem; margin-top: 20px'/></span>
                         <span class='logo2'><span class='big' style='font-family: "minion-pro", serif;
-                                                                  font-weight: 400;
-                                                                  font-style: normal; font-size:0.9rem;'>Slumberous Cat</span>by Yvonne</span></a>
+                                                  font-weight: 400;
+                                                  font-style: normal; font-size:0.9rem;'>Slumberous Cat</span>by Yvonne</span></a>
 
 
                 </div>
