--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -15,23 +15,22 @@ and open the template in the editor.
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-        <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
-
         <link rel="stylesheet" href="https://use.typekit.net/gyc1igq.css">
         <script src="javascript/script.js"></script>
+        <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
         <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     </head>
     <body>
-        
-         <div class="transition-Holder" id="transitionHolder">
-                <div class="transition-bars"></div>
-                <div class="transition-bars"></div>
-                <div class="transition-bars"></div>
-                <div class="transition-bars"></div>
-                <div class="transition-bars"></div>
-                <div class="transition-bars"></div>
+
+        <div class="transition-Holder" id="transitionHolder">
+            <div class="transition-bars"></div>
+            <div class="transition-bars"></div>
+            <div class="transition-bars"></div>
+            <div class="transition-bars"></div>
+            <div class="transition-bars"></div>
+            <div class="transition-bars"></div>
         </div>
-        
+
         <div id="hero">
 
             <span class='op1'>Creative Design and Code</span>
@@ -50,7 +49,20 @@ and open the template in the editor.
             <div id='container1'>
 
                 <div id="mainContent">
-                    Work in progress . . .
+                    <h6>Contact Me</h6>
+                    <form action="https://formsubmit.co/evon.work2@gmail.com" method="POST">
+                        <label for="name">Name</label><br>
+                        <input type="text" id="fname" name="name" placeholder=" yourname"><br><br>
+
+                        <label for="email">Email</label><br>
+                        <input type="email" id="email" name="email" placeholder=" name@mail.com"><br><br>
+
+                        <label for="msg">Message</label><br>
+                        <textarea id="msg" placeholder=" Enter your message here"></textarea><br><br>
+
+                        <button type="submit" class="btn btn-bg">Submit</button>
+                    </form>
+
 
 
 
