--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -58,7 +58,7 @@ and open the template in the editor.
                         <input type="email" id="email" name="email" placeholder=" name@mail.com"><br><br>
 
                         <label for="msg">Message</label><br>
-                        <textarea id="msg" placeholder=" Enter your message here"></textarea><br><br>
+                        <textarea id="msg" placeholder=" Enter your message here" name="message"></textarea><br><br>
 
                         <button type="submit" class="btn btn-bg">Submit</button>
                     </form>
