--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -61,13 +61,13 @@ and open the template in the editor.
                         
                         <!--use &nbsp; for non breaking space if your form name has space-->
                         <label for="name">Name</label><br>
-                        <input type="text" id="name" name="name" placeholder=" yourname"><br><br>
+                        <input type="text" id="name" name="name" placeholder=" yourname" required><br><br>
 
                         <label for="email">Email</label><br>
-                        <input type="email" id="email" name="email" placeholder=" name@mail.com"><br><br>
+                        <input type="email" id="email" name="email" placeholder=" name@mail.com" required><br><br>
 
                         <label for="msg">Message</label><br>
-                        <textarea id="msg" placeholder=" Enter your message here" name="message"></textarea><br><br>
+                        <textarea id="msg" placeholder=" Enter your message here" name="message" required></textarea><br><br>
 
                         <button type="submit" class="btn btn-bg">Submit</button>
                     </form>
