--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -57,7 +57,7 @@ and open the template in the editor.
                         <!--disable captcha-->
                         <input type="hidden" name="_captcha" value="false">
                         
-                        <input type="hidden" name="_next" value="https://blacknet13.github.io/webpages/portfolio/success.html">
+                        <input type="hidden" name="_next" value="http://blacknet13.github.io/webpages/portfolio/success.html">
                         
                         <!--use &nbsp; for non breaking space if your form name has space-->
                         <label for="name">Name</label><br>
