--- a/portfolio/success.html
+++ b/portfolio/success.html
@@ -35,7 +35,7 @@ and open the template in the editor.
 
             <span class='op1'>Creative Design and Code</span>
 
-            <p style='text-align: right; width:100vw; padding-right:2vw; margin-top:80vh; z-index:5; position: fixed; font-size:0.35em;'>Copyright © Slumberous Cat 2023</p>
+            <p class="copyright">Copyright © Slumberous Cat 2023</p>
 
             <div class="sticky-icon-bar"> <!--https://lenadesign.org/2021/08/06/css-sticky-social-media-bar/-->
                 <a href="https://www.linkedin.com/in/yvonyen8/" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a> 
