--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -74,7 +74,7 @@ and open the template in the editor.
                                 </div>
                             </div>
                             <div class="col-md-4 design">
-                                <div class="content">
+                                <div class="content" data-modal="">
                                     <img src="images/autiLearners.png" alt="Nature" style="max-height: 40vh; width:90%; height:90%;">
 
                                     <p>Auti-Learners - App Prototype</p>
@@ -83,19 +83,19 @@ and open the template in the editor.
                         </div>
                         <div class="row">
                             <div class="col-md-4 code">
-                                <div class="content">
+                                <div class="content" data-modal="">
                                     <img src="images/diners.png" alt="Diners" style="max-height: 40vh; width:100%; height:100%;">
                                     <p>Diners - Website Prototype</p>
                                 </div>
                             </div>
                             <div class="col-md-4 code">
-                                <div class="content">
+                                <div class="content" data-modal="">
                                     <img src="images/diners.png" alt="Diners" style="max-height: 40vh; width:100%; height:100%;">
                                     <p>Diners - Website Prototype</p>
                                 </div>
                             </div>
                             <div class="col-md-4 code">
-                                <div class="content">
+                                <div class="content" data-modal="">
                                     <img src="images/diners.png" alt="Diners" style="max-height: 40vh; width:100%; height:100%;">
                                     <p>Diners - Website Prototype</p>
                                 </div>
@@ -103,19 +103,19 @@ and open the template in the editor.
                         </div>
                         <div class="row">
                             <div class="col-md-4 others">
-                                <div class="content">
+                                <div class="content" data-modal="">
                                     <img src="images/gucci.png" alt="Lights" style="max-height: 40vh; width:100%; height:100%;">
                                     <p>GUCCI - Magazine Mockup</p>
                                 </div>
                             </div>
                             <div class="col-md-4 others">
-                                <div class="content">
+                                <div class="content" data-modal="">
                                     <img src="images/gucci.png" alt="Lights" style="max-height: 40vh; width:100%; height:100%;">
                                     <p>GUCCI - Magazine Mockup</p>
                                 </div>
                             </div>
                             <div class="col-md-4 others">
-                                <div class="content">
+                                <div class="content" data-modal="">
                                     <img src="images/gucci.png" alt="Lights" style="max-height: 40vh; width:100%; height:100%;">
                                     <p>GUCCI - Magazine Mockup</p>
                                 </div>
@@ -132,14 +132,15 @@ and open the template in the editor.
                             <div class="row">
 
                                 <span class="close">&times;</span>
-                                <b style="margin-left:1rem;">Diners Commercial Webpage Prototype</b><br>
+                                <b style="margin-left:1rem; margin-top:-0.5rem; padding-bottom: 20px; opacity:0.7;"><i>Diners Commercial Webpage Prototype</i></b><br>
                                 <div class="col-md">
                                     <div class="row">
-                                        <div class="col-md-6 order-12" style="height:50%; overflow: hidden;">
-                                            <img src="images/web1.png" style="width:90%"/><br>
+
+                                        <div class="col-md-5" style="height:50%; overflow: hidden; margin-right:-50px;">
+                                            <img src="images/web1.png" style="width:100%"/><br>
                                             <span class="contentLink"><a href="https://xd.adobe.com/view/b0b34507-7a51-4013-9ac6-eb8e2a6f7c48-e5e0/">See on Adobe XD</a></span>
                                         </div>
-                                        <div class="col-md-6 order-1">
+                                        <div class="col-md-7">
                                             <h6>Diners</h6>
                                             <p>"Healthy meals made easier" is the tagline for the placeholder 
                                                 brand call Diners, the image seen is what the customer's of this brand 
@@ -174,6 +175,7 @@ and open the template in the editor.
                                                 The site map shows an overview of the contents of each page
                                             </p>
                                         </div>
+
 
                                     </div>
 
@@ -197,51 +199,51 @@ and open the template in the editor.
                             <div class="row">
 
                                 <span class="close">&times;</span>
-                                <b style="margin-left:1rem;">Data to be replaced.. WIP</b><br>
+                                <b style="margin-left:1rem; margin-top:-0.5rem; padding-bottom: 20px; opacity:0.7;"><i>'Gucci' Magazine Spread</i></b><br>
                                 <div class="col-md">
                                     <div class="row">
-                                        <div class="col-md-6 order-12" style="height:50%; overflow: hidden;">
-                                            <img src="images/web1.png" style="width:90%"/><br>
-                                            <span class="contentLink"><a href="#">See on Adobe XD</a></span>
+                                        <div class="col-md-5" style="height:50%; overflow: hidden;">
+                                            <img class='imgAdjust' src="images/mag2.png" style="width:100%;"/><br>
+                                            <span class="contentLink">Click image to expand</span>
                                         </div>
-                                        <div class="col-md-6 order-1">
-                                            <h6>Diners</h6>
-                                            <p>"Healthy meals made easier" is the tagline for the placeholder 
-                                                brand call Diners, the image seen is what the customer's of this brand 
-                                                will see on the website when they first enter.</p>
+
+                                        <div class="col-md-7">
+                                            <h6>'Gucci' Magazine</h6>
+                                            <p>This is a mockup of a fashion magazine spread but it has no real
+                                                relation to the actual brand GUCCI except for the look of the 
+                                                Gucci name.</p>
 
                                             <h6>Color Scheme</h6>
-                                            <span class="colorBox" style="background:#009688;" data-color="#009688"></span>
+                                            <span class="colorBox" style="background:#3F5A3D;" data-color="#3F5A3D"></span>
                                             <span class="colorBox" style="background:#FF9800;" data-color="#FF9800"></span>
-                                            <span class="colorBox" style="background:#FFC107;" data-color="#FFC107"></span>
+                                            <span class="colorBox" style="background:#4E554E;" data-color="#4E554E"></span>
                                             <span class="colorBox" style="background:#153243;" data-color="#153243"></span>
-                                            <span class="colorBox" style="background:#284B63;" data-color="#284B63"></span><br>
-                                            <p>The color scheme is split complementary which consist of blue and green to reflect 
-                                                the freshness the brand aims to provide, the orange and yellow gives touches of 
-                                                warmth, enthusiasm to the visual identity</p>
+                                            <span class="colorBox" style="background:#D3B59E;" data-color="#D3B59E"></span><br>
+                                            <p>The color scheme makes use of grey scale and color to make the subject pop</p>
 
-                                            <h6>Brand story</h6>
-                                            <p>This placeholder brand was build around providing nourishing  healthy options to the 
-                                                common public. Their menu ranges from bento boxes that consist of lean proteins, 
-                                                vibrant vegetables that are paired with rice or soba, to acai bowls and kombucha 
-                                                drinks. They source their ingredients from local and foreign farms.</p>
 
                                             <h6>Other details</h6>
-                                            <img src="images/typography1.png" style="width:90%;"/><br><br>
                                             <p>
-                                                The typography chosen appeals to their target audience which consist of 
-                                                mostly women therefore a cursive style can frame the brand as something 
-                                                more delicate and feminine.
+                                                The focus is on minimalistic design to give it a posh look. Lesser words more 
+                                                focus on the overall feeling of the design. The fake overlay of color lighting 
+                                                make it look like it is done in a photoshoot, the overlaid shadow adds to the 
+                                                realism of the surroundings.
                                             </p>
 
-                                            <img src="images/siteMap1.png" style="width:90%;"/><br><br>
+                                            <img src="images/moodBoard2.png" style="width:90%;"/><br><br>
                                             <p>
-                                                The site map shows an overview of the contents of each page
+                                                During the research, the mood board is primarily focus on how other 
+                                                photographers capture a certain look and what the end goal of the 
+                                                magazine spread should carry in it's looks.
                                             </p>
                                         </div>
 
+
                                     </div>
+
                                 </div>
+
+
 
                             </div>
 
@@ -249,6 +251,10 @@ and open the template in the editor.
                         </div>
 
                     </div>
+
+                    <!--separator-->
+
+
 
                     <!--separator-->
 
@@ -297,6 +303,17 @@ and open the template in the editor.
         <script>
 
             filterSelection("all");
+
+
+            var btnContainer = document.getElementById("subNavBox");
+            var btns = btnContainer.getElementsByClassName("subNav");
+            for (var i = 0; i < btns.length; i++) {
+                btns[i].addEventListener("click", function () {
+                    var current = document.getElementsByClassName("active");
+                    current[0].className = current[0].className.replace(" active", "");
+                    this.className += " active";
+                });
+            }
 
             /*---------------*/
             /*var contents = document.getElementsByClassName("content");
